<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Treinamento</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="minha_primeira_imagem">Minha primeira imagem</string>
    <string name="meu_botao">Meu Botão!</string>
    <string name="voce_clicou_na_posicao">voce_clicou_na_posicao</string>
    <string name="voce_clicou_no">voce_clicou_no</string>
    <string name="title_activity_contato">ContatoActivity</string>
    <string name="novo">Novo</string>
    
    <string name="btnSalvar">Salvar</string>
    <string name="txtNome">Nome</string>
    <string name="txtEndereco">Endereco</string>
    <string name="txtEmail">Email</string>
    <string name="txtTelefone">Telefone</string>
    <string name="erro_preenchimento_obrigatorio">Preenchimento obrigatorio</string>
    
    <string name="menu_editar">Editar</string>
    <string name="menu_excluir">Excluir</string>
    <string name="dialog_sim">Sim</string>
    <string name="dialog_mensagem">Deseja excluir o contato %s?</string>
    <string name="dialog_nao">Não</string>
    <string name="confirmacao">Confirmação</string>

</resources>

